--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "./node_modules/mocha/bin/mocha",
+    "test": "happiness && mocha",
     "test-browser": "./node_modules/mochify/bin/cmd.js"
   },
   "repository": {
@@ -20,6 +20,7 @@
     "browser-next-tick": "^1.0.0"
   },
   "devDependencies": {
+    "happiness": "^7.1.2",
     "mocha": "^2.2.1",
     "mochify": "^2.6.0"
   }
