--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "test": "test"
   },
   "scripts": {
+    "prepare": "npm t",
+    "postpublish": "git push && git push --tags",
     "test": "standard && mocha",
     "examples": "browserify examples/little-scene/main.js > examples/little-scene/build.js && open examples/little-scene/index.html",
     "examples-dev": "watchify examples/little-scene/main.js -o examples/little-scene/build.js"
